--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,9 +53,15 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.40.0
 
+# PostgreSQL driver
+psycopg2-binary==2.9.10
+
 # Export functionality
 reportlab>=4.0
 openpyxl>=3.1
 
 # Email
 aiosmtplib>=2.0
+
+# 2FA
+pyotp>=2.9
